tp-smapi (0.40-7) unstable; urgency=low

  * debian/rules:
    + Install README and CHANGES into /u/s/d/tp-smapi-dkms/
      Closes: #562917
  * debian/control:
    + Add ${misc:Depends} to Depends of tp-smapi-source, thanks lintian.

 -- Evgeni Golov <evgeni@debian.org>  Tue, 29 Dec 2009 14:35:16 +0100

tp-smapi (0.40-6) unstable; urgency=low

  * Add DKMS support.
  * debian/control{,modules.in}:
    + Standards-Version: 3.8.3.
  * debian/patches/02_X200-T500-support.patch:
    + Add invert=1 for T400 too.
      Closes: #541641.
  * debian/copyright:
    + Update my e-mail address.

 -- Evgeni Golov <evgeni@debian.org>  Fri, 25 Dec 2009 18:15:36 +0100

tp-smapi (0.40-5) unstable; urgency=low

  * Fix typo in X200/T500 patch.
    Thanks Kiko Piris <menorqui@pirispons.net>
    Closes: #533289

 -- Evgeni Golov <evgeni@debian.org>  Tue, 16 Jun 2009 11:59:02 +0200

tp-smapi (0.40-4) unstable; urgency=low

  * debian/control{,modules.in}:
    + Update my e-mail address.
    + Move Vcs-* fields to my new home on Alioth.
    + Remove DM-Upload-allowed.
  * debian/patches/02_X200-T500-support.patch:
    + Add invert quirks for X200 and T500 reported on Launchpad.
      Closes LP: #374492 and LP: #370289.

 -- Evgeni Golov <evgeni@debian.org>  Tue, 16 Jun 2009 01:26:50 +0200

tp-smapi (0.40-3) unstable; urgency=low

  * debian/control:
    + Fix typo in Vcs-Browser field.
    + Bump Standards-Version to 3.8.1.
    + Move to kernel section.
  * debian/control.modules.in:
    + Bump Standards-Version to 3.8.1.
    + Move to kernel section.
  * debian/{control,rules,patches/}:
    + Use quilt instead of dpatch.
  * debian/patches/99_Makefile-for-Debian.patch:
    + Don't try to be smart and detect ancient kernels, that breaks.
      Closes: #521296
  * debian/rules.modules:
    + Install hdaps.ko in $(KVERS)/updates/, not $(KVERS)/kernel/updates/.
      Closes: #522113
  * debian/rules:
    + Add README.Debian to tp-smapi.tar.bz2, so it will show up in the